--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Dat17v1 - SWC efterår 2017</a>
+                <a class="navbar-brand" href="#page-top">Dat17B - SWC spring 2018</a>
 
             </div>
 
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="https://github.com/dat17v1">Github</a>
+                        <a href="https://github.com/studentsadministration">Github</a>
                     </li>
 
                 </ul>
