--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <td>22/8 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_01&type=&language=">#1</a></td>
-                    <td><a href="https://github.com/dat17v1/02_01_Intro/blob/master/README.md">Introduktion til 2. semester SWC</a></td>
+                    <td><a href="https://github.com/dat17v1/02_01_Intro/blob/master/README.md">Introduktion til 2. semester SWC ...</a></td>
                 </tr>
                 <tr>
                     <td>34</td>
