--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
                     <td>34</td>
                     <td>22/8 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_01&type=&language=">#1</a></td>
-                    <td><a href="https://github.com/dat17v1/02_01_Intro/blob/master/README.md">Introduktion til 2. semester SWC</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=01&type=&language=">#1</a></td>
+                    <td><a href="https://github.com/studentsadministartion/01_agenda/blob/master/README.md">Introduktion til 2. semester SWC</a></td>
                 </tr>
                 <tr>
                     <td>34</td>
                     <td>24/8 - 2017</td>
                     <td>12:30 - 15:00</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_02&type=&language=">#2</a></td>
-                    <td><a href="https://github.com/dat17v1/2_02_Brush-up_Project/blob/master/README.md">Brush-up Project: Fitness Exercise</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=02&type=&language=">#2</a></td>
+                    <td><a href="https://github.com/studentsadministartion/02_agenda/blob/master/README.md">Brush-up Project: Fitness Exercise</a></td>
                 </tr>
                 <tr>
                     <td>35</td>
                     <td>29/8 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_03&type=&language=">#3</a></td>
-                    <td><a href="https://github.com/dat17v1/2_04_User_Interface/blob/master/README.md">User Interfaces</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=03&type=&language=">#3</a></td>
+                    <td><a href="https://github.com/studentsadministartion/03_agenda/blob/master/README.md">User Interfaces</a></td>
                 </tr>
                 <tr>
                     <td>35</td>
