--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <td>29/8 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=03&type=&language=">#3</a></td>
-                    <td><a href="https://github.com/studentsadministration/03_agenda/blob/master/README.md">User Interfaces</a></td>
+                    <td><a href="https://github.com/studentsadministration/03_agenda/blob/master/README.md">Getting started with Spring Boot initializer</a></td>
                 </tr>
                 <tr>
                     <td>35</td>
