--- a/index.html
+++ b/index.html
@@ -106,32 +106,32 @@
                     <td>35</td>
                     <td>31/8 - 2017</td>
                     <td>12:30 - 15:00</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_04&type=&language=">#4</a></td>
-                    <td><a href="https://github.com/dat17v1/2_04_user_interface_ii">User Interfaces II</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=04&type=&language=">#4</a></td>
+                    <td><a href="https://github.com/studentsadministration/04_agenda/blob/master/README.md">Html & Css</a></td>
                 </tr>
 
                 <tr>
                     <td>36</td>
                     <td>5/9 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_05&type=&language=">#5</a></td>
-                    <td><a href="https://github.com/dat17v1/2_05_user_interface_iii/blob/master/README.md">User Interfaces III</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=05&type=&language=">#5</a></td>
+                    <td><a href="https://github.com/studentsadministration/05_agenda/blob/master/README.md">Thymeleaf</a></td>
                 </tr>
 
                 <tr>
                     <td>36</td>
                     <td>7/9 - 2017</td>
                     <td>12:30 - 15:00</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_06&type=&language=">#6</a></td>
-                    <td><a href="https://github.com/dat17v1/2_06_user_interface_iv/blob/master/README.md">User Interfaces IV</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=06&type=&language=">#6</a></td>
+                    <td><a href="https://github.com/studentsadministration/06_agenda/blob/master/README.md">CRUD with Controller, View and Model (MVC)</a></td>
                 </tr>
 
                 <tr>
                     <td>37</td>
                     <td>12/9 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_07&type=&language=">#7</a></td>
-                    <td><a href="https://github.com/dat17v1/2_07_user_interface_vi/blob/master/README.md">User Interfaces VI</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=07&type=&language=">#7</a></td>
+                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">Create, Update & Delete</a></td>
                 </tr>
 
                 <tr>
