--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <td>26/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#11</a></td>
-                    <td><a href=""><small>Syg - erstattes i uge 47</small></a></td>
+                    <td><a href=""></a></td>
                 </tr>
 
                 <tr>
