--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <td>5/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=05&type=&language=">#5</a></td>
-                    <td><a href="https://github.com/studentsadministration/05_agenda/blob/master/README.md">Thymeleaf</a></td>
+                    <td><a href="https://github.com/studentsadministration/05_agenda/blob/master/README.md">Create a Web Page with a List of Students</a></td>
                 </tr>
 
                 <tr>
