--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <td>7/9 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=06&type=&language=">#6</a></td>
-                    <td><a href="https://github.com/studentsadministration/06_agenda/blob/master/README.md">CRUD with Controller, View and Model (MVC)</a></td>
+                    <td><a href="https://github.com/studentsadministration/06_agenda/blob/master/README.md">Create a Web Page with a List of Students</a></td>
                 </tr>
 
                 <tr>
@@ -131,198 +131,198 @@
                     <td>12/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=07&type=&language=">#7</a></td>
-                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">Create, Update & Delete</a></td>
+                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">CRUD with Controller, View and Model (MVC)</a></td>
                 </tr>
 
                 <tr>
                     <td>37</td>
                     <td>14/9 - 2017</td>
                     <td>12:30 - 15:00</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_08&type=&language=">#8</a></td>
-                    <td></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=08&type=&language=">#8</a></td>
+                    <td><a href="https://github.com/studentsadministration/08_agenda/blob/master/README.md">CRUD with Controller, View and Model (MVC)</a></td>
                 </tr>
                 <tr>
                     <td>38</td>
                     <td>19/9 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="">#9</a></td>
-                    <td><a href="https://github.com/dat17v1/StudentAdministration#lav-details-update-delete-funktionalitet">Øvelser til i dag</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=09&type=&language=">#9</a></td>
+                    <td><a href="https://github.com/studentsadministration/09_agenda/blob/master/README.md">Databases</a></td>
                 </tr>
                 <tr>
                     <td>38</td>
                     <td>21/9 - 2017</td>
                     <td>12:30 - 15:00</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=2_10&type=&language=">#10</a></td>
-                    <td><a href="https://github.com/dat17v1/2_10_databaser/blob/master/README.md">Databaser</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=10&type=&language=">#10</a></td>
+                    <td><a href="https://github.com/studentsadministration/010_agenda/blob/master/README.md">Databases</a></td>
                 </tr>
                 <tr>
                     <td>39</td>
                     <td>26/9 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="">#11</a></td>
-                    <td><a href=""></a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=11&type=&language=">#11</a></td>
+                    <td><a href="https://github.com/studentsadministration/11_agenda/blob/master/README.md">Mysql & IntelliJ, Spring Boot</a></td>
                 </tr>
-
                 <tr>
                     <td>39</td>
                     <td>28/9 - 2017</td>
-                    <td>12:30 - 15:00</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=11&type=&language=">#11</a></td>
-                    <td><a href="https://github.com/dat17v1/2_11_mysql_spring">Mysql og IntelliJ, Spring Boot</a></td>
+                    <td>08:30 - 11:45</td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=12&type=&language=">#12</a></td>
+                    <td><a href="https://github.com/studentsadministration/12_agenda/blob/master/README.md">Mysql & IntelliJ, Spring Boot</a></td>
                 </tr>
+          
                 <tr>
                     <td>40</td>
                     <td>3/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=12&type=&language=">#12</a></td>
-                    <td><b><a href="https://github.com/dat17v1/02_12_obligatorisk_opgave">Obligatorisk opgave start</a></b></td>
+                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=13&type=&language=">#13</a></td>
+                    <td><b><a href="https://github.com/studentsadministration/13_agenda/blob/master/README.md">Mandatory Assignment start</a></b></td>
                 </tr>
                 <tr>
                     <td>40</td>
                     <td>5/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href="">#13</a></td>
-                    <td><a href="https://github.com/dat17v1/02_12_obligatorisk_opgave">Obligatorisk opgave vejledning</a></td>
+                    <td><a href="">#14</a></td>
+                    <td><a href="https://github.com/studentsadministration/14_agenda/blob/master/README.md">Mandatory Assignment supervision</a></td>
                 </tr>
                 <tr>
                     <td>41</td>
                     <td>10/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="">#14</a></td>
-                    <td><b><a href="https://github.com/dat17v1/02_12_obligatorisk_opgave">Obligatorisk opgave fremlæggelse</a></b></td>
+                    <td><a href="">#15</a></td>
+                    <td><b><a href="https://github.com/studentsadministration/15_agenda/blob/master/README.md">Mandatory Assignment presentation</a></b></td>
                 </tr>
                 <tr>
                     <td>41</td>
                     <td>12/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=15&type=&language=">#15</a></td>
-                    <td><a href="https://github.com/dat17v1/02_15_databaser_relationer_mellem_tabeller">Databaser og Unikke Værdier og Primary Keys</a></td>
+                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=15&type=&language=">#16</a></td>
+                    <td><a href="https://github.com/studentsadministration/16_agenda/blob/master/README.md">Databaser og Unikke Værdier og Primary Keys</a></td>
                 </tr>
                 <tr>
                     <td>42</td>
                     <td>17/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=16&type=&language=">#16</a></td>
-                    <td><a href="https://github.com/dat17v1/2_16_Relationer_mellem_tabeller">Databaser og relationer mellem tabeller</a></td>
+                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=16&type=&language=">#17</a></td>
+                    <td><a href="https://github.com/studentsadministration/17_agenda/blob/master/README.md">Databaser og relationer mellem tabeller</a></td>
                 </tr>
                 <tr>
                     <td>42</td>
                     <td>19/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href=""></a></td>
-                    <td>Database<!--<small>Flyttet til 16/11</small>--></td>
+                    <td><a href="">#18</a></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>43</td>
                     <td>24/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="">#18</a></td>
-                    <td><a href="https://github.com/dat17v1/2_18_mange_til_mange_forbindelser">Database Modelering - Domæne Modellen og ER-Diagrammer</a></td>
+                    <td><a href="">#19</a></td>
+                    <td><a href="https://github.com/studentsadministration/19_agenda/blob/master/README.md">Database Modelering - Domæne Modellen og ER-Diagrammer</a></td>
                 </tr>
                 <tr>
                     <td>43</td>
                     <td>26/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href="">#19</a></td>
-                    <td><a href="https://github.com/dat17v1/19_normalisering">Normalisering af databasens tabeller</a></td>
+                    <td><a href="">#20</a></td>
+                    <td><a href="https://github.com/studentsadministration/20_agenda/blob/master/README.md">Normalisering af databasens tabeller</a></td>
                 </tr>
                 <tr>
                     <td>44</td>
                     <td>31/10 - 2017</td>
                     <td></td>
-                    <td><a href=""></a></td>
-                    <td><a href="">Normalisering</a><!-- erstanings til senere -->  </td>
+                    <td><a href="">#21</a></td>
+                    <td><a href="https://github.com/studentsadministration/21_agenda/blob/master/README.md">Normalisering</a><!-- erstanings til senere -->  </td>
                 </tr>
                 <tr>
                     <td>44</td>
                     <td>02/10 - 2017</td>
                     <td>11:00 - 15:45</td>
                     <td><a href="">#22</a></td>
-                    <td><a href="">Java Collection Framework</a></td>
+                    <td><a href="https://github.com/studentsadministration/22_agenda/blob/master/README.md">Java Collection Framework</a></td>
                 </tr>
                 <tr>
                     <td>45</td>
                     <td>07/11 - 2017</td>
                     <td><b>08:30 - 15:00</b></td>
                     <td><a href="">#23</a></td>
-                    <td><a href="">Linked List & Java Collection Framework</a></td>
+                    <td><a href="https://github.com/studentsadministration/23_agenda/blob/master/README.md">Linked List & Java Collection Framework</a></td>
                 </tr>
                 <tr>
                     <td>45</td>
                     <td>09/11 - 2017</td>
                     <td>11:00 - 15:45</td>
                     <td><a href="">#24</a></td>
-                    <td><a href="">Thyme Leaf opfølgning</a></td>
+                    <td><a href="https://github.com/studentsadministration/24_agenda/blob/master/README.md">Thyme Leaf opfølgning</a></td>
                 </tr>
                 <tr>
                     <td>46</td>
                     <td>14/11 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#25</a></td>
-                    <td><a href="">Repetition</a></td>
+                    <td><a href="https://github.com/studentsadministration/25_agenda/blob/master/README.md">Repetition</a></td>
                 </tr>
                 <tr>
                     <td>46</td>
                     <td>16/11 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="">#26</a></td>
-                    <td><a href="">START PÅ PROJEKTPERIODEN</a></td>
+                    <td><a href="https://github.com/studentsadministration/26_agenda/blob/master/README.md">START PÅ PROJEKTPERIODEN</a></td>
                 </tr>
                 <tr>
                     <td>47</td>
                     <td>21/11 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#27</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/27_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                 <tr>
                     <td>47</td>
                     <td>23/11 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="">#28</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/28_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                 <tr>
                     <td>48</td>
                     <td>28/11 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#29</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/29_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                 <tr>
                     <td>48</td>
                     <td>30/11 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="">#30</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/30_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                  <tr>
                     <td>49</td>
                     <td>5/12 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#31</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/31_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                 <tr>
                     <td>49</td>
                     <td>7/12 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="">#32</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/32_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                 <tr>
                     <td>50</td>
                     <td>12/12 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#33</a></td>
-                    <td><a href="">Eksamenprojekt</a></td>
+                    <td><a href="https://github.com/studentsadministration/33_agenda/blob/master/README.md">Eksamenprojekt</a></td>
                 </tr>
                 <tr>
                     <td>50</td>
                     <td>14/12 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="">#34</a></td>
-                    <td><a href="">Eksamenprojekt <!-- - <small>(Vejledning via Discord)</small> --></a></td>
+                    <td><a href="https://github.com/studentsadministration/34_agenda/blob/master/README.md">Eksamenprojekt </a></td>
                 </tr>
                 <tr class="danger">
                     <td>51</td>
