--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <td>12/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=07&type=&language=">#7</a></td>
-                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">Create, Update & Delete</a></td>
+                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">Repositories and Intefaces</a></td>
                 </tr>
 
                 <tr>
