--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
                     <td>26/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=11&type=&language=">#11</a></td>
-                    <td><a href="https://github.com/studentsadministration/11_agenda/blob/master/README.md">Mysql & IntelliJ, Spring Boot</a></td>
+                    <td><a href="https://github.com/studentsadministration/11_agenda/blob/master/README.md">Mysql, JDBC & Spring Boot</a></td>
                 </tr>
                 <tr>
                     <td>39</td>
                     <td>28/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=12&type=&language=">#12</a></td>
-                    <td><a href="https://github.com/studentsadministration/12_agenda/blob/master/README.md">Mysql & IntelliJ, Spring Boot</a></td>
+                    <td><a href="https://github.com/studentsadministration/12_agenda/blob/master/README.md">Mysql, JDBC & Spring Boot II</a></td>
                 </tr>
           
                 <tr>
