--- a/index.html
+++ b/index.html
@@ -174,43 +174,43 @@
                     <td>40</td>
                     <td>3/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=13&type=&language=">#13</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=13&type=&language=">#13</a></td>
                     <td><b><a href="https://github.com/studentsadministration/13_agenda/blob/master/README.md">Mandatory Assignment start</a></b></td>
                 </tr>
                 <tr>
                     <td>40</td>
                     <td>5/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href="">#14</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=14&type=&language=">#14</a></td>
                     <td><a href="https://github.com/studentsadministration/14_agenda/blob/master/README.md">Mandatory Assignment supervision</a></td>
                 </tr>
                 <tr>
                     <td>41</td>
                     <td>10/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="">#15</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=15&type=&language=">#15</a></td>
                     <td><b><a href="https://github.com/studentsadministration/15_agenda/blob/master/README.md">Mandatory Assignment presentation</a></b></td>
                 </tr>
                 <tr>
                     <td>41</td>
                     <td>12/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=15&type=&language=">#16</a></td>
-                    <td><a href="https://github.com/studentsadministration/16_agenda/blob/master/README.md">Databaser og Unikke Værdier og Primary Keys</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=16&type=&language=">#16</a></td>
+                    <td><a href="https://github.com/studentsadministration/16_agenda/blob/master/README.md">Databases and Unique Values and Primary Keys</a></td>
                 </tr>
                 <tr>
                     <td>42</td>
                     <td>17/10 - 2017</td>
                     <td>08:30 - 11:45</td>
-                    <td><a href="https://github.com/dat17v1?utf8=%E2%9C%93&q=16&type=&language=">#17</a></td>
-                    <td><a href="https://github.com/studentsadministration/17_agenda/blob/master/README.md">Databaser og relationer mellem tabeller</a></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=17&type=&language=">#17</a></td>
+                    <td><a href="https://github.com/studentsadministration/17_agenda/blob/master/README.md">Databases and relations betqeen tables</a></td>
                 </tr>
                 <tr>
                     <td>42</td>
                     <td>19/10 - 2017</td>
                     <td>11:00 - 15:45</td>
-                    <td><a href="">#18</a></td>
-                    <td></td>
+                    <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=18&type=&language=">#18</a></td>
+                    <td><a href="https://github.com/studentsadministration/18_agenda/blob/master/README.md">Singleton Pattern - limiting database connections</a></td>
                 </tr>
                 <tr>
                     <td>43</td>
