--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <td>12/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=07&type=&language=">#7</a></td>
-                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">Repositories & Interfaces</a></td>
+                    <td><a href="https://github.com/studentsadministration/07_agenda/blob/master/README.md">CRUD with Controller, View and Model</a></td>
                 </tr>
 
                 <tr>
@@ -139,14 +139,14 @@
                     <td>14/9 - 2017</td>
                     <td>12:30 - 15:00</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=08&type=&language=">#8</a></td>
-                    <td><a href="https://github.com/studentsadministration/08_agenda/blob/master/README.md">Repositories & Interfaces II</a></td>
+                    <td><a href="https://github.com/studentsadministration/08_agenda/blob/master/README.md">Repositories & Interfaces</a></td>
                 </tr>
                 <tr>
                     <td>38</td>
                     <td>19/9 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=09&type=&language=">#9</a></td>
-                    <td><a href="https://github.com/studentsadministration/09_agenda/blob/master/README.md">Databases</a></td>
+                    <td><a href="https://github.com/studentsadministration/09_agenda/blob/master/README.md">Repositories & Interfaces II</a></td>
                 </tr>
                 <tr>
                     <td>38</td>
