--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
                     <td>19/10 - 2017</td>
                     <td>11:00 - 15:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=18&type=&language=">#18</a></td>
-                    <td><a href="https://github.com/studentsadministration/18_agenda/blob/master/README.md">Singleton Pattern - limiting database connections</a></td>
+                    <td><a href="https://github.com/studentsadministration/18_agenda/blob/master/README.md">Databases, Many to many relations and JOINS</a></td>
                 </tr>
                 <tr>
                     <td>43</td>
                     <td>24/10 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="">#19</a></td>
-                    <td><a href="https://github.com/studentsadministration/19_agenda/blob/master/README.md">Database Modelering - Domæne Modellen og ER-Diagrammer</a></td>
+                    <td><a href="https://github.com/studentsadministration/19_agenda/blob/master/README.md">Singleton Pattern - limiting database connections</a></td>
                 </tr>
                 <tr>
                     <td>43</td>
