--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <td>17/10 - 2017</td>
                     <td>08:30 - 11:45</td>
                     <td><a href="https://github.com/studentsadministration?utf8=%E2%9C%93&q=17&type=&language=">#17</a></td>
-                    <td><a href="https://github.com/studentsadministration/17_agenda/blob/master/README.md">Databases and relations betqeen tables</a></td>
+                    <td><a href="https://github.com/studentsadministration/17_agenda/blob/master/README.md">Databases and relations between tables</a></td>
                 </tr>
                 <tr>
                     <td>42</td>
